erDiagram

    users {
        uuid id PK
        string name
        string email
        string password
        timestamp created_at
    }

    organizations {
        uuid id PK
        string name
    }

    departments {
        uuid id PK
        uuid organization_id FK
        string name
    }

    roles {
        int id PK
        string name
    }

    user_organizations {
        int id PK
        uuid user_id FK
        uuid organization_id FK
        uuid department_id FK
        int role_id FK
    }

    attendance_records {
        uuid id PK
        uuid user_id FK
        date date
        time clock_in
        time clock_out
        int break_minutes
        string status
    }

    requests {
        uuid id PK
        uuid user_id FK
        string type
        string status
        jsonb data
        timestamp created_at
    }

    approvals {
        int id PK
        uuid request_id FK
        uuid approver_id FK
        int step_order
        string status
        timestamp approved_at
    }

    chat_rooms {
        uuid id PK
        string name
        string type
    }

    chat_room_users {
        int id PK
        uuid room_id FK
        uuid user_id FK
    }

    chat_messages {
        uuid id PK
        uuid room_id FK
        uuid user_id FK
        text message
        timestamp created_at
    }

    announcements {
        uuid id PK
        string title
        text content
        uuid created_by FK
        timestamp created_at
    }

    wiki_pages {
        uuid id PK
        string title
        text content
        uuid created_by FK
        timestamp updated_at
    }

    schedules {
        uuid id PK
        uuid user_id FK
        string title
        timestamp start_time
        timestamp end_time
    }

    tasks {
        uuid id PK
        string title
        text description
        string status
        uuid assigned_to FK
        uuid created_by FK
        date due_date
    }

    files {
        uuid id PK
        string name
        string path
        uuid uploaded_by FK
        timestamp created_at
    }

    payrolls {
        uuid id PK
        uuid user_id FK
        string month
        int base_salary
        int calculated_amount
    }

    search_index {
        int id PK
        string type
        uuid reference_id
        text content
    }

    %% Relationships
    users ||--o{ user_organizations : has
    users ||--o{ attendance_records : has
    users ||--o{ requests : creates
    users ||--o{ chat_room_users : joins
    users ||--o{ chat_messages : sends
    users ||--o{ announcements : creates
    users ||--o{ wiki_pages : creates
    users ||--o{ schedules : has
    users ||--o{ tasks : assigned_to
    users ||--o{ tasks : creates
    users ||--o{ files : uploads
    users ||--o{ payrolls : has
    organizations ||--o{ departments : contains
    organizations ||--o{ user_organizations : has
    departments ||--o{ user_organizations : has
    roles ||--o{ user_organizations : has
    requests ||--o{ approvals : has
    approvals ||--o{ users : approver
    chat_rooms ||--o{ chat_room_users : has
    chat_rooms ||--o{ chat_messages : has
    chat_room_users ||--o{ chat_messages : user